tinodechat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinodechat
  namespace: production
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: tinodechat
  template:
    metadata:
      labels:
        app: tinodechat
    spec:
      containers:
        - name: tinodechat
          image: harbor.emso.vn/emso-common/tinode-chat:0.25.0
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - name: http
              containerPort: 6060
          livenessProbe:
            httpGet:
              path: /
              port: 6060
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 6060
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: uploads
              mountPath: /opt/tinode/uploads
            - name: tinode-ext-config
              mountPath: /etc/tinode-ext
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: tinodechat-uploads-pvc
        - name: tinode-ext-config
          configMap:
            name: tinodechat-ext-config
      imagePullSecrets:
        - name: emso-harbo-production
