tinodechat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinodechat
  namespace: production
spec:
  selector:
    app: tinodechat
  ports:
    - name: http
      protocol: TCP
      port: 6060
      targetPort: 6060
    - name: https
      port: 443
      protocol: TCP
      targetPort: 6060
  type: ClusterIP
